[project]
name = "demo-project"
version = "0.1.0"
description = "Sample project"
authors = [
    {name = "Latheesh Poondla",email = "latheeshpoondla1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly (>=6.3.0,<7.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]

[tool.poetry]
packages = []


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
